PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Add few more cases of error detection on failed test install
- pts-core: Round download size totals in the concise display mode for large files
- toggle-screensaver: Support doing "xscreensaver-command -exit" when needed
- phodevi: Add more stock fallback display modes

Phoronix Test Suite 4.8 Milestone 2
6 July 2013

- pts-core: Expand Mandriva Linux external dependency support to distributions having urpmi
- pts-core: Add Apple OS X font paths for use by the GD graph renderer
- pts-core: Add "/usr/lib64/" to the automated external dependency verification path
- pts-core: Allow passing multiple test identifiers to remove with remove-from-result-file command
- pts-core: Give a warning when the results viewer opens in the KDE Konqueror web-browser
- phodevi: Break operating system string at "("
- phodevi: Don't return "n/a" from LSB release strings
- phodevi: IceWM window manager detection
- phodevi: Add gpu.temp safety check to prevent against AMD Catalyst OverDrive sending garbage
- phodevi: Fix for XRandR resolution query on XMir
- phodevi: Support using systemd-detect-virt as fallback for detecting Linux virtualization method

Phoronix Test Suite 4.8 Milestone 1
20 June 2013

- pts-core: Don't show null error strings on failed test installations
- pts-core: Allow test profiles to pass min/max data results through JSON to graphs using MIN_ and MAX_ prefixes
- pts-core: Support displaying min/max data from the concise (default) display mode text output
- phodevi: MHz -> GHz fix for the cpu.freq sensor on Apple OS X
- phodevi: Add fallback support for using ioreg for calculating sys.power power draw on Apple OS X
- phodevi: Support reporting multiple monitor models from Xorg.0.log

Phoronix Test Suite 4.6.1-Utsira
6 June 2013

- pts-core: Add ONLY_TEST_TYPES environment variable for skipping test profiles that don't belong to a certain hardware type