@@ -115,7 +115,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '4.8.0m2');
-pts_define('PTS_CORE_VERSION', 4720);
+pts_define('PTS_CORE_VERSION', 4721);
 pts_define('PTS_CODENAME', 'SOKNDAL');
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'CLIENT'));
 pts_define('PTS_IS_DEV_BUILD', (substr(PTS_VERSION, -2, 1) == 'm'));
